Alteração na config.html

--- a/API-Web-Data-Viz/public/dashboard/config.html
+++ b/API-Web-Data-Viz/public/dashboard/config.html
@@ -13,7 +13,9 @@
 
 <body onload="listar();">
 
-	<div class="header">
+	<div class="tela">
+
+		<div class="header">
 		<header>
 			<div class="itemsHeader">
 				<h4><a href="../index.html">INICIO</a></h4>
@@ -31,9 +33,9 @@
 				</nav>
 			</div>
 		</header>
-	</div>
+		</div>
 	
-	<div class="container">
+		<div class="container">
 
 		
 		<div class="form">
@@ -53,6 +55,7 @@
 		</div>
 		<div class="image">
 			<img src="../css/img/help.png" alt="">
+		</div>
 		</div>
 	</div>
 
