Finalizaço da pagina de central de ajuda

--- a/API-Web-Data-Viz/public/dashboard/emergencia.html
+++ b/API-Web-Data-Viz/public/dashboard/emergencia.html
@@ -79,7 +79,7 @@
 						<nav class="menu">
 							<ul> <br> <br>
 								<li><a href="#">Perfil</a></li> <br>
-								<li><a href="#">Configurações</a></a></li> <br>
+								<li><a href="config.html">Suporte</a></li> <br>
 								<li><a href="../login.html">Sair</a></a></li> <br>
 							</ul>
 						</nav>
