--- a/API-Web-Data-Viz/public/dashboard/config.html
+++ b/API-Web-Data-Viz/public/dashboard/config.html
@@ -17,18 +17,19 @@
 
 		<div class="header">
 		<header>
+			<a href="index.html"><img class="icone1" src="../css/img/icone.png" alt="Logo da Empresa"></a>
 			<div class="itemsHeader">
-				<h4><a href="../index.html">INICIO</a></h4>
+				<h4><a href="../dashboard/mainPage.html">INICIO</a></h4>
 				<h4><a href="../index.html#sobre-nos">SOBRE NÓS</a></h4>
 				<h4>||</h4>
 				<div class="botao">
 				</div>
 				<nav class="menu">
-					<ul> <br> <br>
+					<ul> <br> <br> <center>
 						<li><a href="#">Perfil</a></li> <br>
-						<li><a href="config.html">Configurações</a></a>
+						<li><a href="config.html">Suporte</a></a>
 						</li> <br>
-						<li><a href="../login.html">Sair</a></a></li> <br>
+						<li><a href="../login.html">Sair</a></a></li> <br></center>
 					</ul>
 				</nav>
 			</div>
@@ -42,14 +43,14 @@
 			<div class="card-container">
 				<div class="card">
 					<h2>Help Desk</h2>
-					<p>Este é um exemplo de card usando CSS.</p>
+					<p>Abrir um chamado no Jira é simples. Os usuários podem facilmente registrar problemas e acompanhar sua resolução.</p>
 					<a href="#" class="card-button">Clique Aqui</a>
 				</div>
 
 				<div class="card2">
 					<h2>Manual de Instalação</h2>
-					<p>Este é outro exemplo de card com um estilo diferente.</p>
-					<a href="#" class="card-button">Clique Aqui</a>
+					<p>O manual de instalação torna a configuração do produto fácil, do início ao fim.<p>
+					<a href="../css/img/ManualDeInstalação1.pdf" download class="card-button">Clique Aqui</a>
 				</div>
 			</div>
 		</div>
@@ -61,230 +62,28 @@
 
 
 	<script>
-		// Função para listar as opções
-		function listar() {
-			const idEmpresa = sessionStorage.EMPRESAS;
-			fetch(`/medidas/listarLinhas/${idEmpresa}`, { method: "GET" })
-				.then(response => response.json())
-				.then(linhas => {
-					const listaLinhas = document.getElementById('listaLinhas');
-					linhas.forEach(linha => {
-						listaLinhas.innerHTML += `<option value="${linha.idLinha}">${linha.nome}</option>`;
-					});
-				})
-				.catch(error => {
-					console.error("Erro ao listar linhas:", error);
-				});
+
+	// Seleciona o botão do menu
+	const menuToggle = document.querySelector('.botao');
+	// Seleciona o menu de navegação
+	const menu = document.querySelector('.menu');
+
+	// Adiciona um evento de clique ao botão do menu
+	menuToggle.addEventListener('click', function () {
+	// Alterna a classe 'active' no menu de navegação
+	menu.classList.toggle('active');
+	});
+
+	// Adiciona um evento de clique ao documento inteiro
+	document.addEventListener('click', function (event) {
+		// Verifica se o clique ocorreu fora do menu
+	if (!menu.contains(event.target) && !menuToggle.contains(event.target)) {
+			// Fecha o menu
+		menu.classList.remove('active');
 		}
+	});
 
-		function carregarGrafico() {
-			const idEmpresa = sessionStorage.getItem("EMPRESAS");
-			const idLinha = document.getElementById('listaLinhas').value;
-			const periodo = document.getElementById('listaPeriodos').value;
-			const title = document.getElementById('Titulo_Fluxo');
-			const dados = document.getElementById('dados');
-			dados.style.marginBottom = '7vh';
-
-
-			fetch(`/medidas/fluxo/${idEmpresa}/${idLinha}/${periodo}`, { method: "GET" })
-				.then(response => {
-					if (!response.ok) {
-						throw new Error('Erro na resposta da rede');
-					}
-					return response.json();
-				})
-				.then(data => {
-					const ctx = document.getElementById('comparisonChart').getContext('2d');
-					if (window.chartInstance) {
-						window.chartInstance.destroy();
-					}
-					let labels, datasetLabel, backgroundColor, borderColor;
-
-					if (periodo === 'hoje') {
-						labels = data.map(item => item.Hora);
-						datasetLabel = 'Total Pessoas';
-						title.textContent = 'Fluxo das Horas do Dia Atual';
-					} else if (periodo === 'dia_semana') {
-						labels = data.map(item => item.Dia_Semana);
-						datasetLabel = 'Total Pessoas';
-						title.textContent = 'Fluxo dos Dias da Semana Atual';
-					} else if (periodo === 'semana_mes') {
-						labels = data.map(item => item.Semana_Do_Mes);
-						datasetLabel = 'Total Pessoas';
-						title.textContent = 'Fluxo das Semanas do Mês Atual';
-					} else if (periodo === 'mes_ano') {
-						labels = data.map(item => item.Mes_Ano);
-						datasetLabel = 'Total Pessoas';
-						title.textContent = 'Fluxo dos Meses do Ano Atual';
-					}
-
-					calcularSomaValores(data); // Chama a função para calcular a soma dos valores e definir as cores
-
-					if (data.length > 0) {
-						const total = data.reduce((acc, curr) => acc + curr.Total_Pessoas, 0);
-						var meta = 0;
-						// Definição das cores de acordo com o total
-						if (periodo === 'hoje') {
-							meta = 1200;
-							if (total < 700) {
-								backgroundColor = 'rgba(255, 0, 0, 0.2)';
-								borderColor = 'rgba(255, 0, 0, 1)';
-							} else if (total >= 700 && total < 1200) {
-								backgroundColor = 'rgba(255, 255, 0, 0.5)';
-								borderColor = 'rgba(255, 255, 0, 1)';
-							} else {
-								backgroundColor = 'rgba(50, 205, 50, 0.2)';
-								borderColor = 'rgba(50, 205, 50, 1)';
-							}
-						} else if (periodo === 'dia_semana') {
-							meta = 2000;
-							if (total < 1500) {
-								backgroundColor = 'rgba(255, 0, 0, 0.2)';
-								borderColor = 'rgba(255, 0, 0, 1)';
-							} else if (total >= 1500 && total < 2000) {
-								backgroundColor = 'rgba(255, 255, 0, 0.5)';
-								borderColor = 'rgba(255, 255, 0, 1)';
-							} else {
-								backgroundColor = 'rgba(50, 205, 50, 0.2)';
-								borderColor = 'rgba(50, 205, 50, 1)';
-							}
-						} else if (periodo === 'semana_mes') {
-							meta = 3000;
-							if (total < 2500) {
-								backgroundColor = 'rgba(255, 0, 0, 0.2)';
-								borderColor = 'rgba(255, 0, 0, 1)';
-							} else if (total >= 2500 && total < 3000) {
-								backgroundColor = 'rgba(255, 255, 0, 0.5)';
-								borderColor = 'rgba(255, 255, 0, 1)';
-							} else {
-								backgroundColor = 'rgba(50, 205, 50, 0.2)';
-								borderColor = 'rgba(50, 205, 50, 1)';
-							}
-						} else if (periodo === 'mes_ano') {
-							meta = 20000;
-							if (total < 15000) {
-								backgroundColor = 'rgba(255, 0, 0, 0.2)';
-								borderColor = 'rgba(255, 0, 0, 1)';
-							} else if (total >= 15000 && total < 20000) {
-								backgroundColor = 'rgba(255, 255, 0, 0.5)';
-								borderColor = 'rgba(255, 255, 0, 1)';
-							} else {
-								backgroundColor = 'rgba(50, 205, 50, 0.2)';
-								borderColor = 'rgba(50, 205, 50, 1)';
-							}
-						}
-
-						// Atualizar o estilo da div comparacaoMain
-						const comparacaoMain = document.getElementById('comparacaoMain');
-						comparacaoMain.style.backgroundColor = backgroundColor;
-						comparacaoMain.style.border = `2px solid ${borderColor}`;
-
-						const metaLine = {
-							label: 'Meta',
-							data: new Array(labels.length).fill(meta),
-							backgroundColor: 'rgba(0, 255, 0, 0.2)', // Cor verde claro
-							borderColor: 'rgba(0, 255, 0, 1)', // Cor verde sólido
-							borderWidth: 2,
-							fill: false,
-							borderDash: [5, 5] // Linha tracejada
-						};
-
-						window.chartInstance = new Chart(ctx, {
-							type: 'line',
-							data: {
-								labels: labels,
-								datasets: [
-									{
-										label: datasetLabel,
-										data: data.map(item => item.Total_Pessoas),
-										backgroundColor: backgroundColor,
-										borderColor: borderColor,
-										borderWidth: 1
-									},
-									metaLine // Adicionando a linha da meta
-								]
-							},
-							options: {
-								plugins: {
-									legend: {
-										labels: {
-											color: 'white' // Define a cor do texto da legenda como branco
-										}
-									}
-								},
-								scales: {
-									x: {
-										ticks: { color: '#fff' },
-										grid: { color: 'rgba(255, 255, 255, 0.25)' }
-									},
-									y: {
-										ticks: { color: '#fff' },
-										grid: { color: 'rgba(255, 255, 255, 0.25)' }
-									}
-								}
-							}
-						});
-					} else {
-						document.getElementById('comparacaoMain').style.display = 'none';
-						alert('Não há dados disponíveis para o período e linha selecionada.');
-						dados.style.marginBottom = '0vh';
-					}
-				})
-				.catch(error => {
-					console.error('Erro ao carregar o gráfico:', error);
-				});
-		}
-
-		function calcularSomaValores(data) {
-			let total = 0;
-
-			data.forEach(item => {
-				total += item.Total_Pessoas;
-			});
-
-			const comparacaoMain = document.getElementById('comparacaoMain');
-			comparacaoMain.style.display = 'block';
-
-			if (total == 0) {
-				comparacaoMain.style.backgroundColor = '#05448091';
-				comparacaoMain.style.border = '2px solid #09d4db';
-			}
-			else if (total < 700) {
-				comparacaoMain.style.backgroundColor = '#fa010165';
-				comparacaoMain.style.border = '2px solid red';
-			} else if (total >= 700 && total < 1200) {
-				comparacaoMain.style.backgroundColor = 'rgba(255, 255, 0, 0.5)';
-				comparacaoMain.style.border = '2px solid yellow';
-			} else {
-				comparacaoMain.style.backgroundColor = 'rgba(50, 205, 50, 0.404)';
-				comparacaoMain.style.border = '2px solid green';
-			}
-		}
-
-
-
-		document.getElementById('listaPeriodos').addEventListener('change', carregarGrafico);
-
-		// Seleciona o botão do menu
-		const menuToggle = document.querySelector('.botao');
-		// Seleciona o menu de navegação
-		const menu = document.querySelector('.menu');
-
-		// Adiciona um evento de clique ao botão do menu
-		menuToggle.addEventListener('click', function () {
-			// Alterna a classe 'active' no menu de navegação
-			menu.classList.toggle('active');
-		});
-
-		// Adiciona um evento de clique ao documento inteiro
-		document.addEventListener('click', function (event) {
-			// Verifica se o clique ocorreu fora do menu
-			if (!menu.contains(event.target) && !menuToggle.contains(event.target)) {
-				// Fecha o menu
-				menu.classList.remove('active');
-			}
-		});
-	</script>
+</script>
 </body>
 
 </html>
